--- a/formes_geo/formes_geo.vcxproj.filters
+++ b/formes_geo/formes_geo.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="donnees.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\FormeGeo-master\formes_geo\rectangle.cpp">
+    <ClCompile Include="rectangle.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
@@ -50,7 +50,7 @@
     <ClInclude Include="donnees.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\FormeGeo-master\formes_geo\rectangle.h">
+    <ClInclude Include="rectangle.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
